--- a/client-service/pom.xml
+++ b/client-service/pom.xml
@@ -59,6 +59,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>$SPRING_CLOUD_VERSION</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
     </dependencies>
 	<dependencyManagement>
 		<dependencies>
