--- a/client-service/pom.xml
+++ b/client-service/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>com.example</groupId>
             <artifactId>client-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
