--- a/client-service/src/main/resources/application.yml
+++ b/client-service/src/main/resources/application.yml
@@ -5,14 +5,19 @@ spring:
   application:
     name: SERVICE-CLIENT
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/clientservicedb?createDatabaseIfNotExist=true
-    username: "root"
-    password: "root123"
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:clientservicedb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: kt
+    password:
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+h2:
+  console:
+    enabled: true
+    path: /h2-console
 
 eureka:
   client:
