--- a/client-service/src/main/resources/application.yml
+++ b/client-service/src/main/resources/application.yml
@@ -7,11 +7,11 @@ spring:
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:clientservicedb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: kt
+    username: sa
     password:
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
 
 h2:
