--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,26 +1,34 @@
-name: CI
+name: Build All Microservices
 
 on:
   push:
-    branches: ["**"]   
+    branches: ["**"]
   pull_request:
-    branches: ["**"]    
+    branches: ["**"]
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        service:
+          - Car-service
+          - client-service
+          - Gateway
+          - eureka-server
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
 
-    - name: Build with Maven
-      run: mvn clean install
-
-    - name: Run tests
-      run: mvn test
+      - name: Build microservice
+        working-directory: ${{ matrix.service }}
+        run: mvn -B clean install
